2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Improve positioning of 50/100/200 zooming without clicking.

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	* Resources/MainMenu.gorm
	Zoom 50/100/200

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.[h,m]
	Separate zooming from zoom index search in two methods.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Implement delete, implement undo for pasteboard operations.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRBox.h
	* GRBox.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRPathObject.h
	* GRPathObject.m
	Init with properties in each parent class, remove plain init for Box.

	* GRCircle.m
	* GRCircle.h
	Init with properties of the parent class.

	* GRBezierPath.h
	* GRBezierPath.m
	Init with properties of the parent class.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	Take zooming in account for the linewidth only during drawing, without changing the effective linewidth.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix missing retains for foreground and stroke colors.

2012-08-27 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix drawing of grid lines when zoomed.

2012-08-27 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	* GRTextEditorView.m
	Fix memory leaks.

2012-08-19 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Do not leak objects while performing deep copy.

2012-08-18 Riccardo Mottola <rm@gnu.org>

	* GRPathObject.h
	* GRPathObject.m
	Fix warning, declare method in superclass.

2012-08-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	* GRBox.m
	* GRCircle.m
	* GRBezierPath.m
	Initialize colors with RGB color space.

2012-08-18 Riccardo Mottola <rm@gnu.org>

	* GRText.m:
	New file format, colors RGB encoded

2012-08-17 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m
	* GRBezierPath.m
	* Graphos.h
	New file format, colors RGB encoded/decoded.

2012-08-14 Riccardo Mottola <rm@gnu.org>

	* GRBox.m
	* GRCircle.m